--- a/sy1.html
+++ b/sy1.html
@@ -1,45 +1,83 @@
+<!DOCTYPE html>
 <html>
- <artcle>
-  <header>
-   <h1>游戏</h1>
-  </header>
-  <body>
-   <footer>
-    <u1>
-     <li>首页</ a></li>
-     <li> <a href="https://www.so.com/s?q=%E5%B8%AE%E5%8A%A9&src=srp&ssid=&fr=se7_newtab_big&psid=d0ddc62df58aec89d956668b08489586">帮助</a>
-    </u1>
-   </footer>
-  </body>
-  <head>
-   <hgroup>
-    <h1>2022年10月6日 星期四 阴</h1>
-    <h2>小学生作文片段</h2>
-   </hgroup>
-   </header>
-   <p>
-    我们都要有环保意识，保护好我们生活的环境。环保体验日记100字是小编为大家准备的，希望能帮到大家。环
-   保体验日记100字一早上，我在上学的路上，看见一瓶没喝完的奶茶丢在路边。又看见一个小学生把红豆粥的杯子，随
-   手扔在路上。
-   </p >
-  </head>  
- </artcle>
- <body>
-  <article>
-   <header>
-    <hgroup>
-     <h1> </h1>
-     <h2>评论标题：太棒了！</h2>
-    </hgroup>
-   </header>
-   <p>
-    评论正文：这年轻人！！！
-   </p >
-  </article>
- </body>
- <footer>
-  <div>
-   版权所有人：HUANG
-  </div>
- </footer>
+	<head>
+		<meta charset="UTF-8">
+		<title>注册表</title>
+	</head>
+	<body>
+		<form action="">
+			姓名：<input type="text" name="username"><br>
+			年龄：<input type="text" name="age"><br>
+			性别：<input type="radio" name="sex" id="man"><i><img src="man.png" ></i>男
+			<input type="radio" name="sex" id="woman"><i><img src="woman.png" ></i>女<br>
+			生日：<select>
+				<option>请选择年份</option>
+				<option>1998</option>
+				<option>1999</option>
+				<option>2000</option>
+				<option>2001</option>
+				<option>2002</option>
+				<option>2003</option>
+			</select>年
+			<select>
+				<option>请选择月份</option>
+				<option>01</option>
+				<option>02</option>
+				<option>03</option>
+				<option>04</option>
+				<option>05</option>
+				<option>06</option>
+				<option>07</option>
+				<option>08</option>
+				<option>09</option>
+				<option>10</option>
+				<option>11</option>
+				<option>12</option>
+			</select>月
+			<select>
+				<option>请选择日期</option>
+				<option>01</option>
+				<option>02</option>
+				<option>03</option>
+				<option>04</option>
+				<option>05</option>
+				<option>06</option>
+				<option>07</option>
+				<option>08</option>
+				<option>09</option>
+				<option>10</option>
+				<option>11</option>
+				<option>12</option>
+				<option>13</option>
+				<option>14</option>
+				<option>15</option>
+				<option>16</option>
+				<option>17</option>
+				<option>18</option>
+				<option>19</option>
+				<option>20</option>
+				<option>21</option>
+				<option>22</option>
+				<option>23</option>
+				<option>24</option>
+				<option>25</option>
+				<option>26</option>
+				<option>27</option>
+				<option>28</option>
+				<option>29</option>
+				<option>30</option>
+				<option>31</option>
+			</select>日<br>
+			爱好：	<input type="checkbox" name="" id="" value="1">阅读
+					<input type="checkbox" name="" id="" value="2">旅行
+					<input type="checkbox" name="" id="" value="3">运动
+					<input type="checkbox" name="" id="" value="4">游戏
+					<input type="checkbox" name="" id="" value="5">发呆<br>
+			个人简介：<br><textarea rows="4" cols="50">请输入你的个人介绍</textarea><br>
+			<input type="checkbox" name="agree" id="f" checked /><label
+					for="f">我同意信息录入</label><br>
+					<input type="submit" value="立即注册" />
+					<input type="reset" value="重新输入" />
+		</form>
+	</body>
 </html>
