--- a/text.html
+++ b/text.html
@@ -1,27 +1,27 @@
-<!Doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
+<meta charset="utf-8">
+<title>菜鸟教程(runoob.com)</title>
+<script>
+function clickCounter() {
+    if(typeof(Storage) !== "undefined") {
+        if (localStorage.clickcount) {
+            localStorage.clickcount = Number(localStorage.clickcount)+1;
+        } else {
+            localStorage.clickcount = 1;
         }
-        .box1 {
-            margin: 40px;
-            width: 200px;
-            height: 200px;
-            background-color: orange;
-            transition: width 1s linear 1s;
-        }
-        .box1:hover {
-            width: 800px;
-        }
-    </style>
+        document.getElementById("result").innerHTML = "你在按钮上已经点击了 " + localStorage.clickcount + " 次。";
+    } else {
+        document.getElementById("result").innerHTML = "Sorry, your browser does not support web storage...";
+    }
+}
+</script>
 </head>
 <body>
-    <div class="box1"></div>
+<p><button onclick="clickCounter()" type="button">点我!</button></p>
+<div id="result"></div>
+<p>点击按钮查看数字会自动增加。</p>
+<p>关闭浏览器，重新打开这个页面点击按钮，可以看到之前的数据是有保留的。</p>
 </body>
 </html>
